fix z-index

--- a/css/cover.css
+++ b/css/cover.css
@@ -44,6 +44,7 @@ body {
   height: 100%;
   background-color: #333;
   /*background-color: rgb(27, 202, 255);*/
+  z-index: 2;
 }
 
 .text-center {
@@ -64,6 +65,7 @@ body {
  */
 .masthead {
   margin-bottom: 2rem;
+  z-index: 5;
 }
 
 .masthead-brand {
@@ -107,6 +109,7 @@ body {
  */
 .cover {
   padding: 0 1.5rem;
+  z-index: 5;
 }
 .cover .btn-lg {
   padding: .75rem 1.25rem;
@@ -162,6 +165,7 @@ body{
     width: 100%;
     height: 100%;
     overflow: hidden;
+    z-index: 0;
 }
 
 .circles li{
@@ -175,6 +179,7 @@ body{
     animation: animate 25s linear infinite;
     bottom: -200px;
     transform-origin: 13% 13%;
+    z-index: 0;
 }
 
 .circles li:nth-child(1){
